--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
             <artifactId>jol-core</artifactId>
             <version>0.14</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.22</version>
+        </dependency>
+
     </dependencies>
 
     <build>
