--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
             <version>8.0.22</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
